# Gascii

./: .gitignore  Cargo.toml  Gascii.config  MODULE_RESPONSIBILITIES.md  OPTIMIZATION_TRADEOFFS.md  README.md  build.rs  install.ps1  install.sh  play.sh  todo.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
src/analyzer/: mod.rs
src/audio/: mod.rs  player.rs
src/core/: audio_manager.rs  extractor.rs  frame_buffer.rs  frame_manager.rs  launcher.rs  mod.rs  playback_runtime.rs  player.rs  render_budget.rs  viewport.rs
src/decoder/: frame_data.rs  mod.rs  video.rs
src/renderer/: backend.rs  cell.rs  display.rs  kitty.rs  mod.rs  processor.rs
src/shared/: constants.rs
src/sync/: clock.rs  mod.rs  vsync.rs
src/ui/: interactive.rs  menu.rs  menu_draw.rs  menu_state.rs  mod.rs
src/utils/: file_utils.rs  logger.rs  memory.rs  mod.rs  platform.rs  runtime.rs  terminal_control.rs  time_utils.rs
