[package]
name = "Gascii"
version = "0.1.1"
edition = "2021"

[dependencies]
crossterm = "0.27"
rodio = { version = "0.17", features = ["symphonia-all"] }
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
opencv = { version = "0.98.2", default-features = false, features = ["videoio", "imgproc", "clang-runtime"] }
ctrlc = "3.4"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.24"
crossbeam = "0.8"
chrono = "0.4"
dirs = "5.0"
crossbeam-channel = "0.5"
fast_image_resize = "4"
lazy_static = "1.4"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
libc = "0.2"
